# QT-test-Project

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
resources/: resources.qrc
src/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  TextEditor.cpp  TextEditor.h  main.cpp
